котлин говно, jabel топ